--- a/Task1LoginRegister/Areas/Admin/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Products/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add New Product";
 }
 
-<div class="container mt-5">
+<div class="container-fluid mt-5">
     <h2 class="text-primary mb-4">Add Product</h2>
 
     <form asp-action="Create" enctype="multipart/form-data" method="post" class="shadow-lg p-4 bg-light rounded">
