--- a/Task1LoginRegister/Areas/Admin/Views/Home/Delete.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Home/Delete.cshtml
@@ -61,11 +61,11 @@
             <div class="text-center mt-4">
                 <form method="post" asp-action="DeleteConfirmed" class="d-inline">
                     <input type="hidden" asp-for="Id" />
-                    <button type="submit" class="btn btn-danger btn-lg me-2">
+                    <button type="submit" class="btn btn-danger me-2">
                         <i class="bi bi-trash3-fill"></i> Delete
                     </button>
                 </form>
-                <a asp-action="Index" class="btn btn-secondary btn-lg">
+                <a asp-action="Index" class="btn btn-secondary">
                     <i class="bi bi-arrow-left-circle"></i> Back to List
                 </a>
             </div>
