--- a/Task1LoginRegister/Views/Payment/PaymentFailed.cshtml
+++ b/Task1LoginRegister/Views/Payment/PaymentFailed.cshtml
@@ -17,7 +17,7 @@
                     <h5>We couldn't process your payment</h5>
                     <p>@ViewBag.ErrorMessage</p>
                     <div class="mt-4">
-                        <a href="/Order/ProcessPayment?orderId=@ViewBag.OrderId" class="btn btn-primary me-2">Try Again</a>
+                        <a href="/Payment/ProcessPayment?orderId=@ViewBag.OrderId" class="btn btn-primary me-2">Try Again</a>
                         <a href="/" class="btn btn-outline-secondary">Continue Shopping</a>
                     </div>
                 </div>
