--- a/Task1LoginRegister/Views/Payment/ProcessPayment.cshtml
+++ b/Task1LoginRegister/Views/Payment/ProcessPayment.cshtml
@@ -12,17 +12,8 @@
                     <h4 class="mb-0">Complete Your Payment</h4>
                 </div>
                 <div class="card-body">
-                    <div class="alert alert-info">
-                        <p><i class="fas fa-info-circle"></i> You are in test mode. Use these test card details:</p>
-                        <ul>
-                            <li>Card Number: 4111 1111 1111 1111</li>
-                            <li>Expiry: Any future date</li>
-                            <li>CVV: Any 3 digits</li>
-                            <li>Name: Any name</li>
-                        </ul>
-                    </div>
-
-                    <div class="row mb-4">
+                    
+                    <div class="row mb-4 alert alert-info">
                         <div class="col-md-6">
                             <h5>Order Details</h5>
                             <p><strong>Order #:</strong> @Model.Description</p>
@@ -75,7 +66,13 @@
                 document.getElementById('razorpay_order_id').value = response.razorpay_order_id;
                 document.getElementById('razorpay_signature').value = response.razorpay_signature;
                 document.getElementById('razorpay-form').submit();
+            },
+                    "modal": {
+            "ondismiss": function() {
+                // Redirect when payment is cancelled
+                window.location.href = '@Url.Action("PaymentCancelled", "Payment", new { razorpay_order_id = Model.OrderId })';
             }
+        }
         };
 
         var rzp = new Razorpay(options);
@@ -85,7 +82,7 @@
         }
     </script>
 
-    <form id="razorpay-form" action="/Order/PaymentCallback" method="post">
+    <form id="razorpay-form" action="/Payment/PaymentCallback" method="post">
         @Html.AntiForgeryToken()
         <input type="hidden" name="razorpay_payment_id" id="razorpay_payment_id" />
         <input type="hidden" name="razorpay_order_id" id="razorpay_order_id" />
