#Minor style changes and adding refund models and service

--- a/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
     @* Content Wrapper *@
     <div id="content-wrapper">
         @* top navigation *@     
-        <nav class="navbar navbar-expand navbar-light bg-gradient-navbar topbar mb-4 shadow-sm">
+        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 shadow-sm">
             
             <div class="d-flex flex-sm-row">
             <a class="navbar-brand" asp-area="Admin" asp-action="Index" asp-controller="Home">
@@ -136,7 +136,7 @@
             </a>
                 <form class="d-none d-sm-inline-block form-check-inline mr-auto ml-md-3 my-2 my-md-0 navbar-search">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" />
+                    <input type="text" class="form-control bg-light border-1 small" placeholder="Search for..." aria-label="Search" />
                     <i class="fas fa-search"></i>
                 </div>
             </form>
@@ -197,7 +197,7 @@
         </div>
 
         <!-- Footer -->
-        <footer class="footer bg-gradient-navbar">
+        <footer class="footer">
             <div class="container my-auto">
                 <div class="text-center">
                     <span>&copy; 2025 - Your E-commerce Admin Dashboard</span>
