--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-navbar py-2">
             <div class="container">
                 <a class="navbar-brand" asp-action="Index" asp-controller="Home">
-                    <img src="~/Images/logo.png" class="img-fluid align-middle" alt="Store Logo" style="max-height: 40px; width: auto;">
+                    <img src="/Images/logo.png" class="img-fluid align-middle" alt="Store Logo" style="max-height: 40px; width: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
