--- a/Task1LoginRegister/wwwroot/css/site.css
+++ b/Task1LoginRegister/wwwroot/css/site.css
@@ -13,7 +13,7 @@ html {
 }
 
 .bg-gradient-navbar {
-    background: linear-gradient(90deg, #007bff, #00088b);
+    background:#fff9ef;
 }
 
 html {
@@ -27,14 +27,14 @@ body {
 
 
 .navbar-nav .nav-link {
-    color: white !important;
+    color: black !important;
     font-weight: 500;
     transition: color 0.3s ease-in-out;
 }
 
 
     .navbar-nav .nav-link:hover {
-        color: #87CEFA !important;
+        color: orange !important;
     }
 
 :root {
@@ -234,8 +234,8 @@ body {
     .navbar-search input {
         border-radius: 20px;
         padding-left: 2.5rem;
-        background-color: var(--light-color);
-        border: 1px solid #eaecf4;
+        background-color: orange;
+        border: 1px solid orange;
     }
 
     .navbar-search i {
@@ -298,7 +298,8 @@ body {
     position: relative; /* Ensure footer stays at the bottom */
     bottom: 0;
     left: 0;
-    color: white;
+    background: #fff9ef;
+    color: black;
     font-size: 14px;
 }
 
@@ -308,14 +309,14 @@ body {
     }
 
 .navbar-nav .nav-link {
-    color: white !important;
+    color: black !important;
     font-weight: 500;
     transition: color 0.3s ease-in-out;
 }
 
 
     .navbar-nav .nav-link:hover {
-        color: #87CEFA !important;
+        color: orange !important;
     }
 
 /* Responsive Adjustments */
