#Added refund functionality code both admin and user side

--- a/Task1LoginRegister/Views/Payment/ProcessPayment.cshtml
+++ b/Task1LoginRegister/Views/Payment/ProcessPayment.cshtml
@@ -47,6 +47,7 @@
             "amount": "@(Model.Amount * 100)",
             "currency": "@Model.Currency",
             "name": "SkyMart",
+            "image": "/images/logo.png",
             "description": "@Model.Description",
             "order_id": "@Model.OrderId",
             "prefill": {
